# Final-Thesis

./: README.md
MyEngine/: CMakeLists.txt  main.cpp  test  test.aes  test.c
MyEngine/AESCrypt_console_v310_x64/AESCrypt_console_v310_x64/: a.exe.aes
MyEngine/aes-linux/src/: aescrypt  aescrypt_keygen
MyEngine/inc/: byte.h  core.h
MyEngine/src/: byte.cpp  core.cpp
